<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="months_abbreviated">
		<item>Jan</item>
		<item>Feb</item>
		<item>Mar</item>
		<item>Apr</item>
		<item>May</item>
		<item>Jun</item>
		<item>Jul</item>
		<item>Aug</item>
		<item>Sep</item>
		<item>Oct</item>
		<item>Nov</item>
		<item>Dec</item>
	</string-array>
	<!-- Title for picture frame gadget to show in list of all available gadgets -->
    <string name="gadget_title">Picture frame</string>

	<!-- Used to format short video duration in Details dialog. minutes:seconds e.g. 00:30 -->
    <string name="details_ms">%1$02d:%2$02d</string>
    <!-- Used to format video duration in Details dialog. hours:minutes:seconds e.g. 0:21:30 -->
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <!-- Activity label. This might show up in the activity-picker -->
    <string name="movie_view_label">Movies</string>
    <!-- shown in the video player view while the video is being loaded, before it starts playing -->
    <string name="loading_video">Loading video\u2026</string>
    <!-- Movie View Resume Playing dialog title -->
    <string name="resume_playing_title">Resume video</string>

    <!-- Movie View Start Playing dialog title -->
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <!-- Movie View Start Playing button "Resume from bookmark" -->
    <string name="resume_playing_resume">Resume playing</string>

    <!-- Movie View Start Playing button "Beginning" -->
    <string name="resume_playing_restart">Start over</string>
    <string name="photos">photos</string>
	<string name="videos">videos</string>
	<string name="camera">Camera</string>

	<!-- Button indicating that the cropped image should be saved -->
	<string name="crop_save_text">Save</string>
	<!-- Button indicating that the cropped image should be reverted back to the original -->
	<string name="crop_discard_text">Discard</string>
	<!-- Hint that appears when cropping an image with more than one face -->
	<string name="multiface_crop_help">Tap a face to begin.</string>
	<!-- Toast/alert that the image is being saved to the SD card -->
	<string name="saving_image">Saving picture\u2026</string>
	<!-- menu pick: crop the currently selected image -->
	<string name="crop_label">Crop picture</string>
	<!-- Toast/alert that the face detection is being run -->
	<string name="running_face_detection">Please wait\u2026</string>

	<!-- Displayed in the title of the dialog for things to do with a picture
		 that is to be "set as" (e.g. set as contact photo or set as wallpaper) -->
	<string name="set_image">Set picture as</string>
	<!-- Toast/alert after saving wallpaper -->
	<string name="wallpaper">Setting wallpaper, please wait\u2026</string>
	<!-- String indicating an action of picking a picture to use as wallpaper
		 (e.g. set wallpaper from "Pictures") -->
	<string name="camera_pick_wallpaper">Pictures</string>
	<string name="camera_setas_wallpaper">Wallpaper</string>

    <!-- Details dialog "OK" button. Dismisses dialog. -->
    <string name="details_ok">OK</string>
    <string name="loading_new">Loading new albums and photos</string>
    <string name="initializing">Loading</string>
    <string name="pick_prompt">Pick an item from your collection</string>
    <string name="no_items">There are no items in your collection</string>
    <string name="home">Home</string>
    <string name="pick">Pick</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="no_sd_card">SD Card unmounted or not present</string>

	<!-- String indicating more actions are available -->
    <string name="more">More</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="slideshow">Slideshow</string>

    <!-- String to play a video -->
    <string name="play">Play</string>
    <string name="menu">Menu</string>
    <string name="details">Details</string>

    <!-- String appended at the end depending upon what is selected eg. 1 album selected -->
    <string name="album_selected">album selected</string>
    <string name="item_selected">item selected</string>
    <string name="albums_selected">albums selected</string>
    <string name="items_selected">items selected</string>

    <string name="album">Album</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="location">Location</string>
    <string name="location_unknown">Unknown location</string>
    <string name="title">Title</string>
    <string name="type">Type</string>

    <!-- String indicating timestamp of photo or video -->
    <string name="taken_on">Taken on</string>
    <string name="added_on">Added on</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="crop">Crop</string>
    <string name="set_as">Set as</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="item">item</string>
    <string name="items">items</string>
    <string name="set_as_contact_icon">Set as contact icon</string>

    <!-- String indicating rough location eg. 25 miles around San Francisco -->
    <string name="miles_around">miles around</string>
    <!-- String indicating an approximate location eg. Around Palo Alto, CA -->
    <string name="around">Around</string>
    <string name="date_unknown">Date unknown</string>
    <string name="video_err">Unable to play video</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_name">MyBaby</string>
    <string name="about_title">关于</string>
    <string name="settings">设置</string>
    <string name="loading">数据加载中...</string>
    <string name="nofolloweddata">木有数据╮(╯▽╰)╭</string>
    <string name="account_management">帐号管理</string>
    <string name="account_management_description">管理登录与分享授权帐号</string>
    <string name="accept_push">开启推送功能</string>
    <string name="accept_push_description">热度C会第一时间推送要闻给您</string>
    <string name="quick_share">开启一键分享</string>
    <string name="quick_share_description">自动分享到所有已授权平台</string>
    <string name="smart_mode">开启智能模式</string>
    <string name="smart_mode_description">仅WiFi下上传图片，节省流量</string>
    <string name="check_update">检查更新</string>
    <string name="feedback">反馈与建议</string>
    <string name="feedback_description">请反馈您对宝贝相册的意见或建议，客服将会在3个工作日内回复您。</string>
    <string name="loadmore">查看更多</string>
    <string name="news_source">新闻来源</string>
    <string name="news_relative">相关新闻</string>
    <string name="login">登录热度C即可追随新闻，随时了解热点新闻最新动向。</string>
    <string name="login_hudong">登录热度C即可参与互动，对热点新闻表个态吧~</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_title">常委会布局东莞扫黄可能是打虎前奏</string>
    <string name="test_origin_url">http://news.66wz.com/system/2014/01/27/103978911.shtml</string>
    <string name="test_summary">\t\t\t\t日前，广西柳州市公安局组织对本市的大型娱乐场所、酒店展开连续几日的治安清查，这次行动共抓获了一批涉嫌吸毒、卖淫嫖娼人员100余名。</string>
    <string name="tryfirst">马上体验</string>
    <string name="reg_or_login">注册/登录</string>
    <string name="QQ">QQ</string>
    <string name="weibo">新浪微博</string>
    <string name="tencent">腾讯微博</string>
    <string name="slogan">亲亲我的宝贝</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
	<string name="share_by_weixin">微信分享</string>
	<string name="share_by_qq">QQ分享</string>
    
</resources>