<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoadingActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myBabyLogo"
        android:layout_marginTop="50dip"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dip"
            android:layout_height="150dip"
            android:layout_margin="5dip"
            android:src="@drawable/logo_icon" />
        

    </RelativeLayout>
    

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myBabyLogo"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="40dip" >

        <LinearLayout
            android:id="@+id/loading_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" 
            android:orientation="horizontal">
            
             <RelativeLayout
                android:id="@+id/QQLogin"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dip" >

                <ImageView
                    android:id="@+id/qq_image"
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/load_qq" />

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/qq_image"
                    android:gravity="center"
                    android:text="@string/QQ" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/QQWeiboLogin"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dip" >

                <ImageView
                    android:id="@+id/tencent_image"
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/load_tencent" />

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tencent_image"
                    android:gravity="center"
                    android:text="@string/tencent" />
            </RelativeLayout>

           

            <RelativeLayout
                android:id="@+id/weiboLogin"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dip" >

                <ImageView
                    android:id="@+id/sina_image"
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/load_sina" />

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sina_image"
                    android:gravity="center"
                    android:text="@string/weibo" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loading_buttons"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/tryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="10dip"
                android:text="@string/tryfirst"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="10dip"
                android:text="@string/reg_or_login"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>